--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "author": "Koenrad MacBride",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "string-hash": "^1.1.3"
+  },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
